# OvercomingOutputDimensionCollapse

./: .gitignore  README.md  pyproject.toml
analysis/1_ODC_on_real_data/: README.md
analysis/1_ODC_on_real_data/1_calculate_best_prediction/: calculate_best_prediction.py  calculate_best_prediction.sh  calculate_psudo_inv.py
analysis/1_ODC_on_real_data/2_calculate_brain_prediction/: calculate_brain_prediction.py  calculate_brain_prediction.sh  featdec-ridge-train-predict.py
analysis/1_ODC_on_real_data/3_reconstruction/: iCNN.py  iCNN.sh  iCNN_best_prediction.py  iCNN_brain_prediction.py
analysis/1_ODC_on_real_data/4_plot/: calculate-mse.py  calculate-mse.sh  plot.py
analysis/2_sparse_regression/: README.md
analysis/2_sparse_regression/1_simulation/: simulation.py  simulation.sh
analysis/2_sparse_regression/2_plot/: plot_simulation.py  plot_theory.py
scripts/: download.py  download_files.json
src/overcoming_output_dimension_collapse/: __init__.py
src/overcoming_output_dimension_collapse/icnn_replication/: critic.py  dataset.py  encoder.py  generator.py  image_domain.py  pipeline.py  utils.py
src/overcoming_output_dimension_collapse/icnn_replication/deep_image_prior/: __init__.py  convolution.py  downsampler.py  unet.py
src/overcoming_output_dimension_collapse/sparse_regression/: fast_ridge.py  fastl2lir_pro.py  solve_theory.py
