[project]
name = "overcoming-output-dimension-collapse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
    "scikit-learn>=1.7.1",
    "bdpy @ git+https://github.com/KamitaniLab/bdpy@dev",
    "torch==2.0.1",
    "torchvision==0.15.2",
    "torchaudio==2.0.2",
    "numpy<2",
    "wandb>=0.21.3",
    "numba>=0.61.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
]

[build-system]
requires = ["uv_build>=0.8.12,<0.9.0"]
build-backend = "uv_build"
